"Get rid of id gateway, added pagination, added day_of_week"
